--- a/react/src/App.css
+++ b/react/src/App.css
@@ -2,5 +2,6 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(168, 206, 239);
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
 }
